# LightConicOS

./: .gitignore  CMakeLists.txt  JMOT v0.3a1.xml  JMOT.xml  README en_US.md  README zh_CN.md  README.en.md  README.md  pyproject.toml
JMOT/: JMOT README zh_CH.md  __init__.py  connect.json  connect.py  control.py  craft.py  extra.py  misc.py  part.py  planet.py  pull.py  pull_example.py  time.py
Telemetry/: __init__.py  connect.json  connect.py  craft.py
docs/: JMOT.html  index.html  search.js
docs/JMOT/: connect.html  control.html  craft.html  extra.html  misc.html  part.html  planet.html  time.html
include/: JMOT.h  JMOT_client.h  JMOT_utils.h
src/: JMOT.cpp  JMOT_client.cpp  JMOT_utils.cpp  control.cpp  craft.cpp  misc.cpp
