[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JMOT"
description = "Juno New Origin Monitor Operation System written in Python"
"version" = "0.3a1.dev2"
dependencies = [
  "numpy>=2.0"
]
requires-python = ">= 3.8"
authors = [
  {name = "Missing Masspoint", email = "1606766209@qq.com"}
]
maintainers = [
  {name = "Missing Masspoint", email = "1606766209@qq.com"}
]
readme = "README.md"
license = "CC-BY-SA-4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = [
  "Juno New Origin Monitor Operation System",
  "Python",
  "Missing Masspoint"
]

[project.urls]
Homepage = "https://gitee.com/szdzld/light-conic-os/tree/JMOT_py/"
Documentation = "https://gitee.com/szdzld/light-conic-os/blob/master/JMOT/JMOT%20README%20zh_CH.md"
Repository = "https://gitee.com/szdzld/light-conic-os.git"
